--- a/app/views/home/beta.html.erb
+++ b/app/views/home/beta.html.erb
@@ -7,15 +7,11 @@
       <%= render @sites %>
     </ul>
 
-    <% cache("home-announcement", :expires_in => 15.minutes) do %>
-      <section class="announcement">
-        <p>Check out all <%= link_to "#{Site.count} sites", sites_path %> or <%= link_to "#{Tool.count} tools", tools_path %>.</p>
-      </section>
-    <% end %>
+    <section class="announcement">
+      <p>Check out all <%= link_to "#{Site.count} sites", sites_path %> or <%= link_to "#{Tool.count} tools", tools_path %>.</p>
+    </section>
 </section>
 
 <sidebar>
-  <% cache("featured_tools", :expires_in => 15.minutes) do %>
-    <%= render :partial => "tools/featured", :object => @featured if @featured && @featured.length > 0 %>
-  <% end %>
+  <%= render :partial => "tools/featured" %>
 </sidebar>
