--- a/app/views/sites/_nav.html.erb
+++ b/app/views/sites/_nav.html.erb
@@ -7,20 +7,11 @@
     <li class="current"><a href="#"><%= @tool.name %></a></li>
   <% end %>
 
-  <% if user_signed_in? %>
-    <% if current_user.claimed?(@site) || current_user.admin? %>
-      <li class="right sites-edit"><%= link_to "Edit", edit_site_path(@site) %></li>
-      <li class="right site_tools-manage"><%= link_to "Manage Tools", manage_site_tools_path(@site) %></li>
-    <% else %>
-      <li class="right site_tools-manage"><%= link_to "Add Tools", manage_site_tools_path(@site) %></li>
-      <li class="right site_claims-new site_claims-create"><%= link_to "Claim", new_site_claim_path(@site) %></li>  
-    <% end %>
-
-    <% if current_user.admin? %>
-      <li class="right"><%= link_to "Delete", @site, :method => :delete, :confirmation => "Are you sure you want to delete this site." %></li>
-    <% end %>
+  <% if logged_in? && (current_user.claimed_site?(@site) || current_user.admin?) %>
+    <li class="right sites-edit"><%= link_to "Edit", edit_site_path(@site) %></li>
+    <li class="right site_tools-manage"><%= link_to "Manage Tools", manage_site_tools_path(@site) %></li>
   <% else %>
-    <li class="right site_claims-new"><%= link_to "Claim", new_site_claim_path(@site) %></li>  
     <li class="right site_tools-manage"><%= link_to "Add Tools", manage_site_tools_path(@site) %></li>
+    <li class="right site_claims-new site_claims-create"><%= link_to "Claim", new_site_claim_path(@site) %></li>  
   <% end %>
 </ul>
