--- a/app/views/sites/_show_sidebar.html.erb
+++ b/app/views/sites/_show_sidebar.html.erb
@@ -1,7 +1,8 @@
 <sidebar>
   <%= render :partial => "bookmarks/related", :object => @site.cached_bookmarks if (@site.bookmarks.size > 0) && @site.cached_bookmarks && @site.cached_bookmarks.length > 0 %>
   <%= render :partial => "sites/similar", :object => @similar_sites if @similar_sites %>  
-  <% if user_signed_in? %>
+  <%= render :partial => "sites/featured" %>
+  <% if logged_in? %>
   <aside>
     <h3>Add an Bookmark</h3>
     <p>Know of a blog post or video about <%= @site.title %>?</p>
