--- a/app/views/tools/edit.html.erb
+++ b/app/views/tools/edit.html.erb
@@ -1,9 +1,7 @@
 <% title "Edit Tool - #{@tool.name}" %>
 
 <section id="content" class="main">
-  <% cache(["header", @tool], :expires_in => 15.minutes) do %>
-    <%= render 'header' %>
-  <% end %>
+  <%= render 'header' %>
   <%= render 'tools/nav' %>
 
   <section>
@@ -27,7 +25,7 @@
 </section>
 
 <sidebar>
-  <% if current_user.admin? %>
+  <% if logged_in? && current_user.admin? %>
   <aside>
     <h3>Admin Options</h3>
     <ul>
