--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -3,7 +3,35 @@
 <section id="content" class="main">
   <h2><%= @title %></h2>
   <section>
-    <%= render 'form' %>
+    <% if @link && @link.parsed? %>
+      <%= render 'form' %>
+    <% else%>
+      <%= semantic_form_for @bookmark, :url => lookup_bookmarks_path, :html => { :id => "lookup_bookmark", :remote => true } do |f| %>
+        <%= f.inputs do %>
+          <%= f.input :url, :as => :string, :required => true, :label => "Bookmark URL" %>
+          <%= f.commit_button :label => "Step 2 >>", :id => "lookup_submit" %>
+          <li id="lookup_loading" style="display:none;"> <img src="/images/spinner.gif"/> We're looking up this link, just a sec.</li>
+        <% end %>
+      <% end %>
+      <div id="edit_bookmark_form"></div>
+      
+      <% javascript do %>
+      var checkForLookup = false
+      $(function() {
+        $("#lookup_bookmark").submit(function() {
+          if(!checkForLookup) {
+            $("#lookup_bookmark input.create").attr("disabled", "disabled");
+            $("#lookup_loading").show();
+            checkForLookup = setInterval("resubmit_lookup()", 5000);
+          }
+        });
+      })
+      
+      function resubmit_lookup() {
+        $("#lookup_bookmark").submit();
+      }
+      <% end %>
+    <% end %>
   </section>
 </section>
 
