Added basic bookmarks

--- a/app/stylesheets/lists.scss
+++ b/app/stylesheets/lists.scss
@@ -34,6 +34,7 @@ a.favicon img { margin:0; width:16px; height:16px; }
 
 ul.sites li.ind .title h4 { width:590px; }
 ul.usings li.ind .title h4 { width:300px; }
+ul.bookmarks li.ind.bookmark .title h4 { width:100%; }
 
 /* sites#show, tools#show */ 
 section.tool .details, section.site .details { }
