--- a/app/views/bookmarks/_related.html.erb
+++ b/app/views/bookmarks/_related.html.erb
@@ -1,8 +1,8 @@
 <aside class="admin">
-  <h3>Related Articles</h3>
+  <h3>Related Bookmark</h3>
   <ul class="lst">
-    <% related.each do |article| %>
-      <li><%= link_to truncate(article.title, :length => 40), article %></li>
+    <% related.each do |bookmark| %>
+      <li><%= link_to truncate(bookmark[:title], :length => 40), bookmark %></li>
     <% end %>
   </ul>
 </aside>
