--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -61,7 +61,14 @@ body.tool_sites-new li.tool_sites-new a:link, body.tool_sites-new li.tool_sites-
 body.tool_sites-index li.tool_sites-index a:link, body.tool_sites-index li.tool_sites-index a:visited,
 body.site_claims-create li.site_claims-create a:link, body.site_claims-create li.site_claims-create a:visited,
 body.tool_sites-manage li.tool_sites-manage a:link, body.tool_sites-manage li.tool_sites-manage a:visited,
-body.sites-edit li.sites-edit a:link, body.sites-edit li.sites-edit a:visited
+body.sites-edit li.sites-edit a:link, body.sites-edit li.sites-edit a:visited,
+body.bookmarks-show li.bookmarks-show a:link, body.bookmarks-show li.bookmarks-show a:visited,
+body.bookmarks-edit li.bookmarks-edit a:link, body.bookmarks-edit li.bookmarks-edit a:visited,
+
+body.bookmarks-sites li.bookmarks-sites a:link, body.bookmarks-sites li.bookmarks-sites a:visited,
+body.bookmarks-tools li.bookmarks-tools a:link, body.bookmarks-tools li.bookmarks-tools a:visited,
+body.tools-bookmarks li.tools-bookmarks a:link, body.tools-bookmarks li.tools-bookmarks a:visited,
+body.sites-bookmarks li.sites-bookmarks a:link, body.sites-bookmarks li.sites-bookmarks a:visited
 
 
 
