--- a/app/stylesheets/tokeninput.scss
+++ b/app/stylesheets/tokeninput.scss
@@ -1,87 +1,82 @@
-/* Example tokeninput style #1: Token vertical list*/
+/* Example tokeninput style #2: Facebook style */
 ul.token-input-list {
     overflow: hidden; 
     height: auto !important; 
     height: 1%;
-    width: 99%;
-    border: 1px solid #999;
+    border:1px solid #888;
+    width: 98%;
     cursor: text;
-    font-size: 16px;
+    font-size: 12px;
     font-family: Verdana;
+    min-height: 1px;
     z-index: 999;
     margin: 0;
     padding: 0;
     background-color: #fff;
 }
 
-ul.token-input-list li {
+ul.token-input-list {
     list-style-type: none;
-    margin:5px 5px 0px 0;
-    padding:2px 0;
 }
 
 ul.token-input-list li input {
     border: 0;
-    width: 300px;
+    width: 100px;
     padding: 3px 8px;
     background-color: white;
+    margin: 2px 0;
 }
 
-ul.token-input-list li.token-input-token {
+li.token-input-token {
     overflow: hidden; 
     height: auto !important; 
     height: 1%;
-    margin: 0px;
-    padding: 3px 5px;
-    color: #eee;
-    font-weight: normal;
+    margin: 3px;
+    padding: 1px 3px;
+    background-color: #eff2f7;
+    color: #000;
     cursor: default;
-    display: block;
-    background-color: #5670A6;
-    font-size: 12px;
+    border: 1px solid #ccd5e4;
+    font-size: 11px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    float: left;
 }
 
-ul.token-input-list li.token-input-input-token {
-  padding:0;
-  margin:0;
-}
-ul.token-input-list li.token-input-input-token input { 
-  padding:3px 5px;
-  margin:5px 5px 0px 0;
-}
 li.token-input-token p {
-    float: left;
-    padding: 0 0 4px 0;
-    margin: 0 10px;
-    font-size:16px;
+    display: inline;
+    padding: 0;
+    margin: 0;
 }
 
 li.token-input-token span {
-    float: right;
-    color: #bbb;
+    color: #a6b3cf;
+    margin-left: 5px;
+    font-weight: bold;
     cursor: pointer;
-    padding-right:10px;
 }
 
 li.token-input-selected-token {
-    background-color: #eff2f7;
+    background-color: #5670a6;
+    border: 1px solid #3b5998;
     color: #fff;
 }
 
-li.token-input-selected-token span {
-    color: #bbb;
+li.token-input-input-token {
+    float: left;
 }
 
 div.token-input-dropdown {
     position: absolute;
-    width: 99%;
+    width: 98%;
     background-color: #fff;
     overflow: hidden;
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
     cursor: default;
-    font-size: 16px;
+    font-size: 11px;
     font-family: Verdana;
     z-index: 1;
 }
@@ -91,7 +86,6 @@ div.token-input-dropdown p {
     padding: 5px;
     font-weight: bold;
     color: #777;
-    font-size:14px;
 }
 
 div.token-input-dropdown ul {
@@ -101,13 +95,11 @@ div.token-input-dropdown ul {
 
 div.token-input-dropdown ul li {
     background-color: #fff;
-    padding: 5px;
-    list-style-type: none;
-    margin: 0;
+    padding: 3px;
 }
 
 div.token-input-dropdown ul li.token-input-dropdown-item {
-    background-color: #fafafa;
+    background-color: #fff;
 }
 
 div.token-input-dropdown ul li.token-input-dropdown-item2 {
@@ -116,14 +108,10 @@ div.token-input-dropdown ul li.token-input-dropdown-item2 {
 
 div.token-input-dropdown ul li em {
     font-weight: bold;
-    font-style: normal;
+    font-style: none;
 }
 
 div.token-input-dropdown ul li.token-input-selected-dropdown-item {
-    background-color: #5670A6;
-    color:#eee;
+    background-color: #3b5998;
+    color: #fff;
 }
-
-
-.inline-tokenlist ul.token-input-list li input { width: 200px; }
-.inline-tokenlist ul.token-input-list li.token-input-token { float:left; }
