--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,52 +1,14 @@
-<% title "Article - #{@article.title}" %>
+<% title "Bookmark - #{@bookmark.title}" %>
 
 <section id="content" class="main tool">
+  <%= render 'header' %>
+  <%= render 'nav' %>
 
-  <div class="tool group ind">
-    <div class="details">
-      <div class="title">
-        <h4><%= link_to @article.title, @article.url, :target => "_blank", :rel => "nofollow" %></h4>
-        <%= content_tag(:p, @article.description) unless @article.description.blank? %>
-        <%= content_tag(:p, link_to(@article.url, @article.url, :target => "_blank", :rel => "nofollow")) %>
-      </div>
 
-      <div class="content">
-        <ul class="sites">
-          <%= raw article_sites(@article, 1000) %>
-        </ul>
-        <ul class="categories">
-          <%= raw article_tools(@article, 1000) %>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div>
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'lineofthought'; // required: replace example with your forum shortname
 
-        // The following are highly recommended additional parameters. Remove the slashes in front to use.
-        var disqus_identifier = 'article_<%= @article.id %>';
-        // var disqus_url = 'http://example.com/permalink-to-page.html';
-
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-  </div>
+  <section class="tab">
+    <p class="main_message">Discuss this bookmark</strong>.
+    <%= render :partial => 'shared/disqus', :object => "bookmark_#{@bookmark.id}" %>
+  </section>
 </section>
-
-<sidebar>
-  <aside>
-    <h3>Admin Options</h3>
-    <ul class="lst">
-      <li><%= link_to "delete", article_path(@article), :method => :delete, :confirm => "Are you sure you want to delete this article?" %></li>
-    </ul>
-  </aside>
-</sidebar>
+<%= render 'show_sidebar' %>
