--- a/app/views/bookmarks/_form.erb
+++ b/app/views/bookmarks/_form.erb
@@ -3,6 +3,9 @@
     <%= f.input :url, :as => :string, :required => true, :label => "Bookmark URL" %>
     <%= f.input :title, :as => :string, :required => true, :label => "Site Title" %>
     <%= f.input :description, :as => :text, :required => false, :label => "Bookmark Description", :input_html => { :rows => 3 } %>
+    <%= f.input :is_video, :as => :boolean, :label => "Contains video?" %>
+    <%= f.input :is_presentation, :as => :boolean, :label => "Contains presentation?" %>
+    
     <%= f.input :tool_ids, :as => :string, :wrapper_html => { :class => "tokeninput row-list" }, :label => "Tools Mentioned", :hint => "Start typing a tool name, or type the complete name.", :input_html => { :name => "bookmark[tool_ids][]" } %>
     <%= f.input :site_ids, :as => :string, :wrapper_html => { :class => "tokeninput inline-tokenlist" }, :label => "Sites Mentioned", :hint => "Start typing a site URL or site name.", :input_html => { :name => "bookmark[site_ids][]" } %>
   <% end %>
@@ -20,7 +23,7 @@
   <% end %>
 <% end %>
 
-<% javascript do %>
+<script type="text/javascript">
 var site_token_options = {
     hintText: "Start typing the a site URL or site name.",
     noResultsText: "No sites found. You can <a href='<%= new_site_path %>' target='_blank'>add a site</a> at anytime.",
@@ -37,6 +40,9 @@ $(function() {
   $("#bookmark_site_ids").tokenInput('<%= autocomplete_sites_path %>', site_token_options);
   update_tool_connection();
   update_site_connection();
+  
+  $("#bookmark_tool_ids").change(function(e){ update_tool_connection(); });
+  $("#bookmark_site_ids").change(function(e){ update_site_connection(); });
   
   $("#add_connection").click(function(){
     var source = "<li class='connection-{{site.id}}-{{tool.id}}'><strong>{{site.name}}</strong> is using <strong>{{tool.name}}</strong>." +
@@ -82,4 +88,4 @@ function update_site_connection() {
   var result = template(data);
   $("#site_connection").html(result);
 }
-<% end %>
+</script>
