--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -5,7 +5,7 @@
   <%= render 'nav' %>
 
   <section class="tab">
-    <% render 'form' %>
+    <%= render 'form' %>
   </section>
 </section>
 <%= render 'show_sidebar' %>
