--- a/app/views/tools/edit.html.erb
+++ b/app/views/tools/edit.html.erb
@@ -5,22 +5,7 @@
   <%= render 'tools/nav' %>
 
   <section>
-    <%= semantic_form_for @tool, :format => params[:format] do |f| %>
-
-      <%= f.inputs do %>
-        <%= f.input :url, :as => :string, :required => true, :label => "Unique URL for this Tool", :hint => "Definitive source for this tool." %>
-        <%= f.input :name, :as => :string, :required => true, :label => "Tool Name", :hint => "Just the name here." %>
-        <%= f.input :language, :as => :select, :collection => Tool.languages.find(:all, :order => :name), 
-                    :label => "Programming Language", :hint => "Primary language used. If multiple, select the main one." %>
-        <%= f.input :categories, :as => :check_boxes, :required => false, :label => "Categories",
-                    :collection => Category.order(:name), :hint => "Is this tool a database? A framework? A web service?" %>
-        <%= f.input :description, :as => :text, :required => false, :input_html => { :rows => 5 },
-                    :hint => "Few words about this tool. There's no limit here, so give as much info as you want." %>
-      <% end %>
-      <%= f.buttons :style => "display:none" do %>
-        <%= f.commit_button %>
-      <% end %>
-    <% end %>
+    <%= render 'form' %>
   </section>
 </section>
 
